5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1601_1802.log
== SUBMITION (2019-03-31 21:30:22) 
-- CODE:
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
rz= math.sqrt(5*d1)
pi= math.pi
fm= (rz + (pi ** (d2/3)))

-- EXECUTION TIME:
0.182146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1802/main.py", line 4, in <module>
    rz= math.sqrt(5*d1)
NameError: name 'math' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:30:29) 
-- CODE:
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
rz= math.sqrt(5*d1)
pi= math.pi
fm= (rz + (pi ** (d2/3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    rz= math.sqrt(5*d1)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:31:02) 
-- CODE:
import math 
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
rz= math.sqrt(5*d1)
pi= math.pi
fm= (rz + (pi ** (d2/3)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    rz= math.sqrt(5*d1)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:31:35) 
-- CODE:
import math 
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
rz= math.sqrt(5*d1)
pi= math.pi
fm= (rz + (pi ** (d2/3)))
print(fm)

-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:37) 
-- CODE:
import math 
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
fm= ((math.sqrt(5 * d1)) + (math.pi ** (d2/3)))
print(fm)

-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:35:23) 
-- CODE:
import math 
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
fm= (((5 * d1) ** (1/2)) + (math.pi ** (d2/3)))
print(fm)

-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:36:08) 
-- CODE:
import math 
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
fm= (((5 * d1) ** (1/2)) + (math.pi ** (d2/3)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:37:08) 
-- CODE:
import math 
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
fm= (((5 * d1) ** (1/2)) + (math.pi ** (d2/3)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:38:35) 
-- CODE:
import math 
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
fm= ((math.sqrt(num)) + (math.pi ** (d2/3)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:10:54) 
-- CODE:
import math 
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
fm= ((math.sqrt(num)) + (math.pi ** (d2/3)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 16:13:40) 
-- CODE:
import math from
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
fm= ((math.sqrt(num)) + (math.pi ** (d2/3)))
print(int(fm))

-- ERROR:
File "XXXX", line 1
    import math from
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:06) 
-- CODE:
import math from
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
print(int(fm))

-- ERROR:
File "XXXX", line 1
    import math from
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:06:18) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:07:24) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= (((math.sqrt(num)) + (math.pi ** (rz)))//p)
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:13) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= (((math.sqrt(num)) + (math.pi ** (rz)))%p)
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:41) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= (((math.sqrt(num)) + (math.pi ** (rz)))//p)%p
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:08:47) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= (((math.sqrt(num)) + (math.pi ** (rz)))//p)%p
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:32) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
print(int(fm))

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:09:59) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
print((fm.int()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print((fm.int()))
AttributeError: 'float' object has no attribute 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:28) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= int(((math.sqrt(num)) + (math.pi ** (rz))))
print(fm)

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:11:52) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
vr= p-fm
print(vr)

-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:09) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
vr= p-fm
print(int(vr))

-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:12:50) 
-- CODE:
import math
p= int(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
num = 5 * d1
rz= d2/3
fm= ((math.sqrt(num)) + (math.pi ** (rz)))
vr= p-fm
print(int(vr))

-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:32) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz)) + (math.pi ** (expoente)))
PVR= p-dano
print(int(PVR))

-- OUTPUT:
187
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:39) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((raiz ** 2) + (math.pi ** (expoente)))
PVR= p-dano
print(int(PVR))

-- OUTPUT:
165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:44) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz) + (math.pi ** (expoente)))
PVR= p-dano
print(int(PVR))

-- ERROR:
File "XXXX", line 8
    PVR= p-dano
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:09) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz) + (math.pi ** (expoente)))
pvr= p-dano
print(int(pvr))

-- ERROR:
File "XXXX", line 8
    pvr= p-dano
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:40) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz) + (math.pi ** (expoente)))
vr= p-dano
print(int(vr))

-- ERROR:
File "XXXX", line 8
    vr= p-dano
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:52) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz) + (math.pi ** (expoente)))
vr= p - dano
print(int(vr))

-- ERROR:
File "XXXX", line 8
    vr= p - dano
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:24:01) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente= d2/3
dano= ((math.sqrt(raiz) + (math.pi ** (expoente)))
vr= p + dano
print(int(vr))

-- ERROR:
File "XXXX", line 8
    vr= p + dano
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:25:33) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
vr = p + dano
print(int(vr))

-- ERROR:
File "XXXX", line 8
    vr = p + dano
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:26:00) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
x = p + dano
print(int(x))

-- ERROR:
File "XXXX", line 8
    x = p + dano
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:27:15) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
restante= p - dano
print(int(x))

-- ERROR:
File "XXXX", line 8
    restante= p - dano
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:27:38) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
restante= p-dano
print(int(x))

-- ERROR:
File "XXXX", line 8
    restante= p-dano
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:28:13) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
print(int(dano))

-- ERROR:
File "XXXX", line 8
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:29:03) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))

x= p-dano		  
print(int(x))

-- ERROR:
File "XXXX", line 9
    x= p-dano		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:30:09) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
x = dano-p		  
print(int(x))

-- ERROR:
File "XXXX", line 8
    x = dano-p		  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:30:41) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
pvr = dano-p		  
print(int(x))

-- ERROR:
File "XXXX", line 8
    pvr = dano-p		  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:31:13) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
pvr = (dano-p)	  
print(int(x))

-- ERROR:
File "XXXX", line 8
    pvr = (dano-p)	  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:31:55) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
int(pvr) = (dano-p)	  
print(int(pvr))

-- ERROR:
File "XXXX", line 8
    int(pvr) = (dano-p)	  
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:32:14) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
x = float(dano-p)	  
print(int(x))

-- ERROR:
File "XXXX", line 8
    x = float(dano-p)	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:32:30) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
1x = float(dano-p)	  
print(int(1x))

-- ERROR:
File "XXXX", line 8
    1x = float(dano-p)	  
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:32:40) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))

-- ERROR:
File "XXXX", line 8
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:32:51) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))

-- ERROR:
File "XXXX", line 8
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:33:19) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:33:35) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
print(int(dano))
-- ERROR:
File "XXXX", line 8
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:42:43) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
print(int(p - dano))
-- ERROR:
File "XXXX", line 8
    print(int(p - dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:43:01) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
print(p - dano)
-- ERROR:
File "XXXX", line 8
    print(p - dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:44:18) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
t = p - dano
print(int(t))
-- ERROR:
File "XXXX", line 8
    t = p - dano
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:44:48) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = ((math.sqrt(raiz) + (math.pi ** (expoente)))
var = p - dano
print(int(var))
-- ERROR:
File "XXXX", line 8
    var = p - dano
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:46:19) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = int(((math.sqrt(raiz) + (math.pi ** (expoente))))
print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:46:35) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = int(((math.sqrt(raiz) + (math.pi ** (expoente))))

-- ERROR:
File "XXXX", line 8
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:46:52) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = int(((math.sqrt(raiz) + (math.pi ** (expoente))))
-- ERROR:
File "XXXX", line 8
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:47:18) 
-- CODE:
from math import
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = int(((math.sqrt(raiz) + (math.pi ** (expoente))))
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:47:33) 
-- CODE:
from math import *
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
raiz = 5 * d1
expoente = d2/3
dano = int(((math.sqrt(raiz) + (math.pi ** (expoente))))
-- ERROR:
File "XXXX", line 8
    
                                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:49:27) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= float(input("Qual o valor do primeiro dado sorteado? "))
d2= float(input("Qual o valor do segundo dado sorteado? "))
dano = int(((math.sqrt(5 * d1) + (math.pi ** (d2/3))))
print(dano)
-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:50:07) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
dano = int(((math.sqrt(5 * d1) + (math.pi ** (d2/3))))
print(dano)
-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:50:46) 
-- CODE:
import math
p= float(input("Quais os pontos de vida inicial? "))
d1= int(input("Qual o valor do primeiro dado sorteado? "))
d2= int(input("Qual o valor do segundo dado sorteado? "))
d = int(((math.sqrt(5 * d1) + (math.pi ** (d2/3))))
print(d)
-- ERROR:
File "XXXX", line 6
    print(d)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
